[package]
name = "ipdb-server"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
log4rs = "1.2"
anyhow = "1.0.68"
indoc = "1.0.8"
clap-verbosity-flag = "2.0.0"
clap = { version = "4.1.1", features = ["derive", "cargo", "env", "wrap_help"] }
bytes = "1.3"
memmap2 = "0.5.8"
serde = "1.0.152"
serde_json = "1.0.91"
once_cell = "1.17"

[dependencies.actix-web]
version = "4.2.1"
default-features = false
features = ["rustls", "macros", "compress-brotli", "compress-gzip"]

[dependencies.tokio]
version = "1.24.1"
features = ["rt-multi-thread", "macros", "parking_lot"]
